Fix: Layer Attach and dettach placed in the correct order

--- a/physicsEngine/imgui.ini
+++ b/physicsEngine/imgui.ini
@@ -3,10 +3,14 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=306,84
+Pos=244,44
 Size=550,633
 
 [Window][Hello From ehll]
 Pos=249,98
 Size=65,48
+
+[Window][SeTTINGS]
+Pos=55,197
+Size=337,82
 
